[gd_scene load_steps=4 format=2]

[ext_resource path="res://src/core/OptionalConfirmation.gd" type="Script" id=1]

[sub_resource type="StyleBoxFlat" id=1]
bg_color = Color( 1, 1, 1, 1 )
draw_center = false
border_width_left = 3
border_width_right = 3
border_color = Color( 2.2, 1.6, 3, 1 )
corner_radius_top_left = 3
corner_radius_bottom_right = 3

[sub_resource type="StyleBoxFlat" id=2]
bg_color = Color( 1, 1, 1, 1 )
draw_center = false
border_width_top = 3
border_width_bottom = 3
border_color = Color( 1.5, 1.1, 2, 1 )
corner_radius_top_left = 3
corner_radius_bottom_right = 3

[node name="OptionalConfirmation" type="ConfirmationDialog"]
offset_right = 20.0
offset_bottom = 20.0
exclusive = true
resizable = true
script = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HorizontalHighlights" type="Panel" parent="."]
offset_right = 40.0
offset_bottom = 40.0
mouse_filter = 2
theme_override_styles/panel = SubResource( 1 )

[node name="VecticalHighlights" type="Panel" parent="."]
offset_right = 40.0
offset_bottom = 40.0
mouse_filter = 2
theme_override_styles/panel = SubResource( 2 )
[connection signal="confirmed" from="." to="." method="_on_OptionalConfirmation_confirmed"]
